src/trade/tradeConf.css
.trade-conf ul {
    list-style:none;
    margin: 0;
    padding: 3px 0 0 0;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}

.trade-conf ul li {
    text-align: center;
    padding: 0 5px;
}

.trade-conf .title-row {
    background: #c2c1c1;
    font-size: large;
    padding: 5px 0;
}
.trade-conf .message-row {
  padding: 10px 0;
  border-bottom: 1px solid #ccc;
}
.trade-conf .payout-row {
  border-bottom: 1px solid #ccc;
  border-top: 1px solid #ccc;
  padding: 0;
}
.trade-conf .payout-row li {
  height: 90px;
  display: flex;
  padding: 0 10px;
  flex-direction: column;
  justify-content: center;
  width: 33%;
  font-size: 1.2em;
  font-weight: bold;
}
.trade-conf .payout-row li:not(:first-child) {
  border-left: 1px solid #ccc;
}
.trade-conf .payout-row li.amount-per-point span:nth-child(1) {
  white-space: nowrap;
  font-size: 90%;
}

.trade-conf .payout-row li span:first-child {
  height: 50px;
}
.trade-conf .payout-row li span:nth-child(2) {
  font-weight: bold;
}

.trade-conf .transaction-row {
  margin-top: 15px;
}

.trade-conf .view-row {
  margin-top: 40px;
  background: #c2c1c1;
}
.trade-conf .view-row .view {
  padding-right: 30px;
  font-size: 1.4em;
}
.trade-conf .view-row .arrow {
  width: 30px;
  height: 30px;
}

.trade-conf .balance-row {
  bottom: 0;
  position: absolute;
  width: 100%;
}
.trade-conf .balance-row .bold {
    font-weight: bold;
}

.trade-conf .lost {
  background: rgba(204, 0, 0, 0.098);
}
.trade-conf .won {
  background: rgba(46, 136, 54, 0.196);
}
.trade-conf .digits-row {
  margin-top: 15px;
  max-height: 100px;
  padding:0 0 5px 0;
  overflow-y: hidden;
  display: block;
}
.trade-conf .digits-row li {
  height: 18px;
  display: flex;
  padding-top: 2px;
}
.trade-conf .digits-row li span {
  width: 33%;
}

.trade-conf .tick-chart { }

.trade-conf .close {
  position: absolute;
  z-index: +1;
  right: 0;
  background: #e98024;
  border: 1px solid #e98024;
  border-radius: 0 0 0 4px;
  color: #fff;
  cursor: pointer;
  font-size: 16px;
  padding: 0px 10px;
}

